ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
  - host: "api.myblog.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: gateway-service
              port:
                number: 8080
  - host: "myblog.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: blog-app
              port:
                number: 80
